fixed z-index layout of hero component

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,10 +7,6 @@
     &_content {
         background-color: #151515;
         max-width: 145rem;
-        position: relative;
         padding-inline: 16.5rem;
-        left: 0;
-        right: 0;
-        z-index: -2;
     }
 }
