--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -13,5 +13,6 @@ $green: #4ee1a0;
 
     &:hover {
         color: $green;
+        cursor: pointer;
     }
 }
